--- a/style.css
+++ b/style.css
@@ -4,10 +4,24 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 body {
-    background: white;
+    
+    height: 100vh;
+    background-color: #FEE140;
+    background-image: linear-gradient(120deg, #FEE140 0%, #cf174f 100%);
+}
+
+h1 {
+    text-align: center;
+    color: white;
+    padding: 30px;
+    font-size: 3em;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 /* O Tabuleiro */
@@ -16,7 +30,7 @@ section {
     width: 500px;
     height: 500px;
     margin: auto;
-    margin-top: 80px;
+    
     display: grid;
     justify-content: center;
     align-items: center;
@@ -27,12 +41,17 @@ section {
 /* As Casas */
 .quads { 
     display: flex;
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
+    width: 120px;
+    height: 120px;
+    border: 2.5px solid rgb(255, 255, 255);
+    border-radius: 8px;
     justify-content: center;
     align-items: center;
     position: relative;
+}
+
+.quads.x, .quads.o {
+    cursor: not-allowed;
 }
 
 /* Quadradinhos: Retirando Suas Bordas*/
@@ -42,13 +61,12 @@ section {
 .quads:nth-child(1), .quads:nth-child(4), .quads:nth-child(7) {border-left: none;}
 
 /* X */
-
-.jdv.x .quads:not(.x):not(.o):hover::before, .jdv.x .quads:not(.x):not(.o):hover::after {
-    background: rgba(255, 0, 0, 0.25 ) !important;
-} /* Esse daqui foi criado para fazer esses elementos mais transparentes. Utiliza-se a tag "!important" para dar prioridade ao mesmo*/
-
-.jdv.o .quads:not(.x):not(.o):hover::before, .jdv.o .quads:not(.x):not(.o):hover::after {
-    background: rgba(255, 0, 0, 0.25 ) !important;
+.jdv.x .quads:not(.x):not(.o):hover::before, 
+.jdv.x .quads:not(.x):not(.o):hover::after, 
+.jdv.o .quads:not(.x):not(.o):hover::before, 
+.jdv.o .quads:not(.x):not(.o):hover::after {
+    background: hsla(51, 100%, 80%, 0.35) !important;
+    /* Esse daqui foi criado para fazer esses elementos mais transparentes. Utiliza-se a tag "!important" para dar prioridade ao mesmo*/
 }
 
 .quads.x::before, .quads.x::after, .jdv.x .quads:not(.x):not(.o):hover::before, .jdv.x .quads:not(.x):not(.o):hover::after {
@@ -56,7 +74,7 @@ section {
     display: flex;
     width: calc(100px * 0.8);
     height: calc(166px * 0.08);
-    background: red;
+    background: hsl(51, 96%, 80%);
     position: absolute;
     align-items: center;
     align-content: center;
@@ -80,7 +98,7 @@ section {
     display: flex;
     width: calc(100px * 0.8);
     height: calc(100px * 0.8);
-    background: red;
+    background: hsl(51, 100%, 80%);
     position: absolute;
     align-items: center;
     align-content: center;
@@ -90,30 +108,53 @@ section {
 }
 
 /* Resultados */
-div#resultado {
+div.resultado { /* Enquanto a Classe 'msg-vencedor' não surgir, a Div permanecerá bloqueada */
     display: none;
+    transition: 0.5s;
+}
+
+div.resultado.msg-vencedor { /* Quando essa classe surgir na Div, será destravada para ativar o Resultado e o Botão Restart */
+    display: flex;
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     /* Usando essa formulinha de cima, o elemento irá sobrescrever tudo o que está por trás */ 
+    
     background: rgba(0, 0, 0, 0.5);
     color: white;
-    font-size: 2em;
+    font-size: 3em;
     justify-content: center;
     align-items: center;
-    flex-direction: column; /* Os itens irão ficar um encima do outro */
+    flex-direction: column; 
+    /* Os itens irão ficar um encima do outro */
+    
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.205);
+    font-weight: bolder;
 }
 
-#resultado button {
-    background: blue;
+button#btres {
+    background: #cf174f 100%;
     padding: 10px;
     color: white;
-    font-size: 1.2em;
-    margin: 10px;
+    font-size: 0.8em;
+    margin: 15px;
+    padding: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.39);
+    border-radius: 10px;
+    font-weight: bold;
+    border: 2.5px solid white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.253);
+    
+    transition: 0.25s;
+    transition-timing-function: ease;
 }
 
-.resultado {
-    display: flex;
+button#btres:hover {
+    background-color: hsl(51, 100%, 70%);
+    border: 2.5px solid hsl(342, 82%, 10%);
+    border-radius: 20px;
+    cursor: pointer;
+    color: hsl(342, 80%, 10%);
 }
